@@ -8,7 +8,6 @@
 # Mandatory properties
 #===============================================================================
 
-force.abbreviation.html.pattern.abbrev = <html>F<sub>{0}</sub></html>
 controls.show-energy-chart = Show Energy Chart
 controls.energy-chart= Energy Chart
 controls.clear-heat = Clear Heat
@@ -36,12 +35,13 @@ object.custom.description.html.pattern.name = <html>{0}</html>
 object.description.combobox.html.pattern.name_mass_kinetic_static =<html><b>{0}</b><br></br> {1} kg \u03BC<sub>k</sub>={2} \u03BC<sub>s</sub>={3}</html> 
 
 #Forces
-forces.Wall=Wall
-forces.friction=friction
+forces.wall=Wall
+forces.friction=Friction
 forces.parallel=Parallel Force
 forces.applied=Applied
-forces.Gravity=Gravity
-forces.Net=Sum
+forces.gravity-parallel=Gravity ||
+forces.gravity=Gravity
+forces.sum-parallel=Sum ||
 forces.parallel-title = Parallel Forces
 forces.energy-title = Energy
 forces.parallel-title-with-units = Parallel Forces (N)
@@ -49,6 +49,7 @@ forces.energy-title-with-units = Energy (J)
 
 #Forces (with subscript)
 force.pattern=<html>F<sub>{0}</sub></html>
+force.abbreviation.html.pattern.abbrev = <html>F<sub>{0}</sub></html>
 
 symbols.parallel = \u2225
 symbols.perpendicular= \u22A5
